# sfmcp

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml  run-mcp.sh  sfdx-project.json
scripts/: run_http.sh  run_stdio.sh
sfmcp/: salesforce_client.py  server.py
sfmcp/config/: logging.py  settings.py
sfmcp/prompts/: opps_by_stage.py
sfmcp/resources/: saved_queries.py
sfmcp/tools/: describe.py  describe_flow.py  list_dashboards.py  list_flows.py  list_objects.py  list_reports.py  query.py
tests/: fixtures.py  test_query.py  test_server.py
